# demangler

./: CMakeLists.txt  LICENSE
include/demangler/: demangler.hh
include/demangler/details/: CVQualifiers.hh  Demangler.hh  Node.hh  Parser.hh  PrintOptions.hh  State.hh  Utils.hh
include/demangler/details/node/: ArrayType.hh  BareFunctionType.hh  BuiltinSubstitution.hh  BuiltinType.hh  Constructor.hh  Decltype.hh  Encoding.hh  ExprPrimary.hh  Expression.hh  Holder.hh  LocalName.hh  MangledName.hh  Name.hh  NestedName.hh  Number.hh  OperatorName.hh  Prefix.hh  SeqId.hh  SourceName.hh  Substitution.hh  TemplateArg.hh  TemplateArgs.hh  TemplateParam.hh  Type.hh  UnqualifiedName.hh  UnresolvedName.hh  UnscopedName.hh  UnscopedTemplateName.hh  UserSubstitution.hh
src/: demangler.cpp  main.cpp
src/details/: CVQualifiers.cpp  Demangler.cpp  Node.cpp  Parser.cpp  State.cpp
src/details/node/: ArrayType.cpp  BareFunctionType.cpp  BuiltinSubstitution.cpp  BuiltinType.cpp  Constructor.cpp  Decltype.cpp  Encoding.cpp  ExprPrimary.cpp  Expression.cpp  Holder.cpp  LocalName.cpp  MangledName.cpp  Name.cpp  NestedName.cpp  Number.cpp  OperatorName.cpp  Prefix.cpp  SeqId.cpp  SourceName.cpp  Substitution.cpp  TemplateArg.cpp  TemplateArgs.cpp  TemplateParam.cpp  Type.cpp  UnqualifiedName.cpp  UnresolvedName.cpp  UnscopedName.cpp  UnscopedTemplateName.cpp  UserSubstitution.cpp
tests/: CMakeLists.txt  test.cpp
